cmake_minimum_required(VERSION 3.1)
project(yukicoder_contest_223)
set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} -std=c++11)

add_executable(1_yukicoder_contest223_a 1_yukicoder_contest223_a.cpp)
add_executable(2_yukicoder_contest223_b 2_yukicoder_contest223_b.cpp)
add_executable(3_yukicoder_contest223_c 3_yukicoder_contest223_c.cpp)
add_executable(4_yukicoder_contest223_d 4_yukicoder_contest223_d.cpp)
add_executable(5_yukicoder_contest223_e 5_yukicoder_contest223_e.cpp)
