cmake_minimum_required(VERSION 3.1)
project(yukicoder_contest_228)
set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} -std=c++11)

add_executable(1_yukicoder_contest228_a 1_yukicoder_contest228_a.cpp)
add_executable(2_yukicoder_contest228_b 2_yukicoder_contest228_b.cpp)
add_executable(3_yukicoder_contest228_c 3_yukicoder_contest228_c.cpp)
add_executable(4_yukicoder_contest228_d 4_yukicoder_contest228_d.cpp)
add_executable(5_yukicoder_contest228_e 5_yukicoder_contest228_e.cpp)
add_executable(6_yukicoder_contest228_f 6_yukicoder_contest228_f.cpp)
