cmake_minimum_required(VERSION 3.1)
project(abc_110)
set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} -std=c++11)

add_executable(1_abc110_a 1_abc110_a.cpp)
add_executable(2_abc110_b 2_abc110_b.cpp)
add_executable(3_abc110_c 3_abc110_c.cpp)
add_executable(4_abc110_d 4_abc110_d.cpp)
add_executable(5_abc110_e 5_abc110_e.cpp)
add_executable(6_abc110_f 6_abc110_f.cpp)
