cmake_minimum_required(VERSION 3.1)
project(abc_128)
set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} -std=c++11)

add_executable(1_abc128_a 1_abc128_a.cpp)
add_executable(2_abc128_b 2_abc128_b.cpp)
add_executable(3_abc128_c 3_abc128_c.cpp)
add_executable(4_abc128_d 4_abc128_d.cpp)
add_executable(5_abc128_e 5_abc128_e.cpp)
add_executable(6_abc128_f 6_abc128_f.cpp)
