cmake_minimum_required(VERSION 3.1)
project(abc_131)
set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} -std=c++11)

add_executable(1_abc131_a 1_abc131_a.cpp)
add_executable(2_abc131_b 2_abc131_b.cpp)
add_executable(3_abc131_c 3_abc131_c.cpp)
add_executable(4_abc131_d 4_abc131_d.cpp)
add_executable(5_abc131_e 5_abc131_e.cpp)
add_executable(6_abc131_f 6_abc131_f.cpp)
