cmake_minimum_required(VERSION 3.1)
project(abc_132)
set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} -std=c++11)

add_executable(1_abc132_a 1_abc132_a.cpp)
add_executable(2_abc132_b 2_abc132_b.cpp)
add_executable(3_abc132_c 3_abc132_c.cpp)
add_executable(4_abc132_d 4_abc132_d.cpp)
add_executable(5_abc132_e 5_abc132_e.cpp)
add_executable(6_abc132_f 6_abc132_f.cpp)
