cmake_minimum_required(VERSION 3.1)
project(abc_133)
set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} -std=c++11)

add_executable(1_abc133_a 1_abc133_a.cpp)
add_executable(2_abc133_b 2_abc133_b.cpp)
add_executable(3_abc133_c 3_abc133_c.cpp)
add_executable(4_abc133_d 4_abc133_d.cpp)
add_executable(5_abc133_e 5_abc133_e.cpp)
add_executable(6_abc133_f 6_abc133_f.cpp)
