cmake_minimum_required(VERSION 3.1)
project(abc_134)
set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} -std=c++11)

add_executable(1_abc134_a 1_abc134_a.cpp)
add_executable(2_abc134_b 2_abc134_b.cpp)
add_executable(3_abc134_c 3_abc134_c.cpp)
add_executable(4_abc134_d 4_abc134_d.cpp)
add_executable(5_abc134_e 5_abc134_e.cpp)
add_executable(6_abc134_f 6_abc134_f.cpp)
