cmake_minimum_required(VERSION 3.1)
project(abc_139)
set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} -std=c++11)

add_executable(1_abc139_a 1_abc139_a.cpp)
add_executable(2_abc139_b 2_abc139_b.cpp)
add_executable(3_abc139_c 3_abc139_c.cpp)
add_executable(4_abc139_d 4_abc139_d.cpp)
add_executable(5_abc139_e 5_abc139_e.cpp)
add_executable(6_abc139_f 6_abc139_f.cpp)
