cmake_minimum_required(VERSION 3.1)
project(abc_143)
set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} -std=c++11)

add_executable(1_abc143_a 1_abc143_a.cpp)
add_executable(2_abc143_b 2_abc143_b.cpp)
add_executable(3_abc143_c 3_abc143_c.cpp)
add_executable(4_abc143_d 4_abc143_d.cpp)
add_executable(5_abc143_e 5_abc143_e.cpp)
add_executable(6_abc143_f 6_abc143_f.cpp)
