cmake_minimum_required(VERSION 3.1)
project(agc_034)
set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} -std=c++11)

add_executable(1_agc034_a 1_agc034_a.cpp)
add_executable(2_agc034_b 2_agc034_b.cpp)
add_executable(3_agc034_c 3_agc034_c.cpp)
add_executable(4_agc034_d 4_agc034_d.cpp)
add_executable(5_agc034_e 5_agc034_e.cpp)
add_executable(6_agc034_f 6_agc034_f.cpp)
