cmake_minimum_required(VERSION 3.1)
project(agc_037)
set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} -std=c++11)

add_executable(1_agc037_a 1_agc037_a.cpp)
add_executable(2_agc037_b 2_agc037_b.cpp)
add_executable(3_agc037_c 3_agc037_c.cpp)
add_executable(4_agc037_d 4_agc037_d.cpp)
add_executable(5_agc037_e 5_agc037_e.cpp)
add_executable(6_agc037_f 6_agc037_f.cpp)
